tests/fixtures/errors/invalid_arrow_slash_tokenization.puml
@startuml
A -//-> B: malformed-double-slash
@enduml
